tests/rustdoc-ui/intra-doc/typo-imported-item-issue-159496.stderr
error: unresolved link to `Hashmap`
  --> $DIR/typo-imported-item-issue-159496.rs:7:16
   |
LL | /// Creates a [Hashmap].
   |                ^^^^^^^ no item named `Hashmap` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`
note: the lint level is defined here
  --> $DIR/typo-imported-item-issue-159496.rs:3:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: there's a similarly named item `HashMap`
   |
LL - /// Creates a [Hashmap].
LL + /// Creates a [HashMap].
   |

error: unresolved link to `std::collections::Hashmap`
  --> $DIR/typo-imported-item-issue-159496.rs:13:16
   |
LL | /// Creates a [std::collections::Hashmap].
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^ no item named `Hashmap` in module `collections`
   |
help: there's a similarly named item `HashMap`
   |
LL - /// Creates a [std::collections::Hashmap].
LL + /// Creates a [std::collections::HashMap].
   |

error: unresolved link to `Hashmap`
  --> $DIR/typo-imported-item-issue-159496.rs:17:16
   |
LL | /// Creates a [type@Hashmap].
   |                ^^^^^^^^^^^^ no item named `Hashmap` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`
help: there's a similarly named item `HashMap`
   |
LL - /// Creates a [type@Hashmap].
LL + /// Creates a [type@HashMap].
   |

error: unresolved link to `Hashmap`
  --> $DIR/typo-imported-item-issue-159496.rs:21:17
   |
LL | /// Creates a [`Hashmap<Hashmap>`].
   |                 ^^^^^^^^^^^^^^^^ no item named `Hashmap` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`
help: there's a similarly named item `HashMap`
   |
LL - /// Creates a [`Hashmap<Hashmap>`].
LL + /// Creates a [`HashMap<Hashmap>`].
   |

error: aborting due to 4 previous errors

